# MCP_101

./: .gitignore  extract_response_content.py  pyproject.toml  requirements.txt  test_mcp_ollama.py
M01-Foundations_of_MCP/V01-MCP_Server_Basics/: README.md
M01-Foundations_of_MCP/V02-Setting_Up_Your_First_MCP_Server/: mcp_client-v2.py  mcp_client.py  mcp_server.py
M04-Example_MCP_Servers/: mcp_example_apps-dev.md  mcp_server_examples-v2.md  mcp_server_examples.md
M04-Example_MCP_Servers/01-Basic_Calculator_MCP_Server/: 01-calc_test.py  mcp_ollama_client.py  server.py
M04-Example_MCP_Servers/02-User_Profile_MCP_Server/: ollama_mcp_client-v2.py  ollama_mcp_client.py  profile_ollama_test.py  profile_test.py  server.py
M04-Example_MCP_Servers/03-Simple_MCP_Client/: client.py
M04-Example_MCP_Servers/04-Code_Review_Helper_MCP_Server/: server.py
M04-Example_MCP_Servers/05-Weather_Forecast_Tool/: server.py
M04-Example_MCP_Servers/06-Multi_Tool_LangGraph_Research_Agent/: README.md  graph_agent.py  requirements.txt
M04-Example_MCP_Servers/07-Secure_File_Reader_MCP_Server/: server.py
M04-Example_MCP_Servers/08-CSV_Quick_Insights_Tool/: requirements.txt  server.py
M04-Example_MCP_Servers/09-LangChain_Agent_with_MCP_Calculator_Tool/: agent.py  requirements.txt
M04-Example_MCP_Servers/10-Chatbot_Context_Server_Client/: client.py  server.py
M04-Example_MCP_Servers/11-Ollama_Client_with_MCP_Context/: client.py
M04-Example_MCP_Servers/12-Stock_Price_Sentiment_Bundler/: server.py
Module_1-Foundations_of_MCP/Video_01-Introduction_to_MCP/: README.md
(+24 files in other folders)
