[project]
name = "mcp_101"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.24",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.14",
    "langgraph>=0.4.0",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "pydantic-ai-slim[mcp]>=0.1.8",
    "rich>=14.0.0",
]
